# Haskell-CV

./: .gitignore  LICENSE  README.md  haskell-cv.cabal
Segmentation/: designdoc.md
haskell_cv/: Main.hs
haskell_cv/segmentation/: segmentation.hs
