name:                haskell-cv
version:             0.1.0.0
description:         Haskell Computer Vision Library
license:             MIT
license-file:        LICENSE
author:              Andre Slavescu
maintainer:          andre.slavescu@gmail.com
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10

executable myproject-exe
  main-is:             Main.hs
  other-modules:       
  other-extensions:    
  build-depends:       base >=4.7 && <4.17
                     , hip
  hs-source-dirs:      haskell-cv
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AndreSlavescu/Haskell-Computer-Vision-Library
